# Horiz-Realtime-Operating-System

./: Cargo.toml  README.md  fix_arch_errors.py
.github/workflows/: verify-architectures.yml
src/: lib.rs
src/api/: flag.rs  mod.rs  task.rs  types.rs
src/arch/: arm.rs  arm64.rs  arm64_start.rs  arm_start.rs  avr.rs  avr_start.rs  context.rs  h8.rs  h8_start.rs  loongarch64.rs  loongarch64_start.rs  m6502.rs  m6502_start.rs  m68k.rs  m68k_start.rs  mil_std_1750a.rs  mil_std_1750a_start.rs  mips.rs  mips_start.rs  mod.rs  msp430.rs  msp430_start.rs  powerpc.rs  powerpc_start.rs  riscv.rs  riscv64.rs  riscv64_start.rs  riscv_start.rs  rl78.rs  rl78_start.rs  rx.rs  rx_start.rs  sh.rs  sh_start.rs  sparc.rs  sparc_start.rs  v850.rs  v850_start.rs  x86_64.rs  x86_64_start.rs  (+2 more)
src/kernel/: mod.rs  scheduler.rs  sync.rs  tcb.rs
